Fixing word wrap

--- a/src/components/molecules/CandidacyList/CandidacyList.module.css
+++ b/src/components/molecules/CandidacyList/CandidacyList.module.css
@@ -3,3 +3,8 @@
 	max-width: 100%;
 	border-radius: 10px;
 }
+
+.description {
+	white-space: pre-wrap;
+	word-wrap: break-word;
+}
